--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -31,6 +31,11 @@
       @include s1280 {
         margin-bottom: 15px;
       }
+      @include s768 {
+        width: 100%;
+        font-size: 24px;
+        text-align: center;
+      }
     }
     section {
       max-width: 744px;
@@ -47,13 +52,14 @@
       @include s768 {
         max-width: 90%;
         margin: auto;
+        padding-top: 40px;
       }
       .items-container {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         @include s768 {
-          overflow-y: scroll;
+          overflow-x: auto;
           flex-wrap: nowrap;
         }
       }
@@ -66,6 +72,7 @@
       padding-top: 85px;
       @include s768 {
         margin: auto;
+        padding-top: 10px;
       }
     }
   }
